# nanoBragg

./: .gitignore  mtz_to_P1hkl.com  nanoBragg.c  noisify.c  nonBragg.c
cuda/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  nanoBragg.c  nanoBraggCPU.h  nanoBraggCUDA.cu  nanoBraggCUDA.h
cuda/docs/: DF-SINCOS.md  DF64-ARITHMETIC.md  SINCG-DELTA.md
cuda/prof/: profncu_release.sh
cuda/src/: nanoBragg.c  nanoBraggCPU.c  nanoBraggCPU.h  nanoBraggCUDA.cu  nanoBraggCUDA.h  nanotypes.h
cuda/test/: A.mat  Makefile  README.md  gen_cpu.sh  ledger_append.sh  reseed_golden.sh  run.sh  test_release.sh
cuda/test/cells/: coverage.jsonl  grid320.jsonl  guards.jsonl  pairwise.jsonl  perf.jsonl
cuda/test/golden/: coverage.df64.tsv  coverage.fp32.tsv  grid320.fp32.tsv  guards.df64.tsv  guards.fp32.tsv  pairwise.df64.tsv  pairwise.fp32.tsv
cuda/test/ledger/: results.tsv  runs.tsv
cuda/test/spec/: base.json  dimensions.jsonl  groups.json  plan.json
cuda/test/src/: gen_cells.c  metrics.c
